[package]
name = "backup"
description = "An automated backup tool to dump MariaDB databases and uploa them to a Backblaze S3 bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2_backblaze = "0.1.8"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
# dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = "1.36.0"
# tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }
toml = "0.8.11"
